# Platformer

src/: CMakeLists.txt  main.cpp
src/game/: game.cpp  game.h
src/gamestate/: gamestate.h
src/objects/graphics_object/: GraphicsObject.cpp  GraphicsObject.h  graphics_object.cpp
src/objects/hero/: hero.cpp  hero.h
src/settings/: config.cpp  config.h
